﻿1.2.0.4 Release notes
* TinyAbomination trinket


1.2.0.3 Release notes
* Cinderglacier now has benefit on disease.
* A new Priority element: CinderDisease, to cast disease on Ciderglacier proc.
* Deathbringer hot fix.
* Spell partial resist tuning.
* The ghoul only benefit from some raid buff if the ghoul is permanent(BoK and MotW).


1.2.0.2 Release notes
* Correction on Priority editor.
* Weapon Dps scaling option added.
* Better Bone shield/UA usage when used after BloodStrike
* New buff: Frost Fever/Blood Plague from another deathknight.
* New Priority "FadeRime" to cast HB when Rime buff is about to fade.
* Haste EP Calculation: Calculation will take longer due to the the sim calculating at multiple value of haste to have more consistent value.
* Option Wait for FC modification: The flag will trigger when the AP of the character is greater than 80% of the maximum possible AP. 
* Report DPS should contain back damaging proc.

1.2.0.1 Release notes
* DPS Value for talents correction.
* Option to merge in the report should work correctly.
* Magical Scourge strike appears as crit if orginal strike is crit.
* Scourge strike calculation was not correct in the 1.2 release.


1.2 Release notes
* Better reporting.
* DPS Value for talents. Check Template Editor tab.
* Correction on Killing machine that would proc too much since 1.1.8.4
* New option tell the sim to keep Blood Runes synchronised.
* EP Calculation: Hit and expertise are modified only to calculate their respective value.
* Hyperspeed Accelerators implemented
* The sim should no more crach if no intro is selected.
* Option to merge or not in the report Main Hand/Off hand Strikes, Scourge strike...
* Option to add a title to the report.
* Prio/Rotation Editor a lot more user friendly.

1.1.8.5 Release notes
* Deathbringers Will 3rd proc on frost spec is ArP
* Bryntroll proc implemented

1.1.8.4 Release notes
* Removal of Glyph of Icy Touch II. 
* Bone Shield Precast when Many Fight option is checked.