@@ -1,5 +1,7 @@
 ﻿1.2.0.4 Release notes
 * TinyAbomination trinket
+* Rune Grace Time tweak
+* Racial expertise corection
 
 
 1.2.0.3 Release notes
